Adds support for PhantomJS

--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -2,5 +2,5 @@
     "extends": "../.jshintrc",
 
     "mocha": true,
-    "predef": ["require", "define", "blanket", "mocha"]
+    "predef": ["require", "define", "blanket", "mocha", "mochaPhantomJS"]
 }
